Fixeds some tests